--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "next": "14.2.5",
+    "rc-slider": "^11.1.5",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8"
